--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                     <li class="content__list-item">
                         <a href="HTMLbase/index.html">Урок 3</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="HTMLLA/dz.html">Урок 22</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
