--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                     <li class="content__list-item">
                         <a href="HTMLLA/dz.html">Урок 22</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="dzCSS/dz2.html">Урок 34</a>
+                    </li>                    
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
