--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
                     </li>
                     <li class="content__list-item">
                         <a href="dzCSS/dz2.html">Урок 34</a>
-                    </li>                    
+                    </li>
+                    <li class="content__list-item">
+                        <a href="les46/dz.html">Урок 46</a>
+                    </li>    
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
