--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                     </li>
                     <li class="content__list-item">
                         <a href="les44/dz.html">Урок 44</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="maketone/maket.html">Урок 55</a>
                     </li>    
                 </ul>
             </div>
