--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
                     </li>
                     <li class="content__list-item">
                         <a href="maketone/maket.html">Урок 55</a>
-                    </li>    
+                    </li>
+                    <li class="content__list-item">
+                        <a href="bem-64/index.html">Урок 64</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
