--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                     <li class="content__list-item">
                         <a href="homework-74/lesson-68/pos-red.html">Урок 74</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="clockshop/index.html">Макет с часами</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
