--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                     <li class="content__list-item">
                         <a href="clockshop/index.html">Макет с часами</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="JS-first/html.html">Первая ДЗ по джавке</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
