--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                     <li class="content__list-item">
                         <a href="JS-first/html.html">Первая ДЗ по джавке</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="java/html.html">Боль</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
