--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                     <li class="content__list-item">
                         <a href="java/html.html">Боль</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="wake-bake/index.html">Срез Торта</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
