--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <a href="java/html.html">Боль</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="wake-bake/index.html">О компании</a>
+                        <a href="wake-bake/index.html">Аккордион</a>
                     </li>
                 </ul>
             </div>
