--- a/wake-bake/index.html
+++ b/wake-bake/index.html
@@ -11,7 +11,7 @@
 
 <body class="body">
     <div class="wrapper">
-        <header class="header">
+        <header class="header header--margin-bottom">
             <div class="header__top">
                 <div class="container">
                     <div class="header__top-inner">
