--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                     <li class="content__list-item">
                         <a href="wake-bake/index.html">Урок 150</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="wake-bake/index.html">Урок 154</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
