--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
                 <div class="content__list-diplom">
-                    <a href="ПАПКА-С-НОМЕРОМ-УРОКА">Ссылка на ДЗ</a>
+                    <a href="seo/index.html">Ссылка на ДЗ</a>
                 </div>
                 <div class="content__decor">
                     <div class="content__decor-text">Давай проверим, чему ты научился!</div>
@@ -121,3 +121,4 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
