--- a/seo/index.html
+++ b/seo/index.html
@@ -1849,8 +1849,8 @@
                             <defs>
                                 <linearGradient id="paint0_linear_1_554" x1="1045.66" y1="372.887" x2="352.824"
                                     y2="12.4812" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#F4F5F7" stop-opacity="0" />
-                                    <stop offset="1" stop-color="#F4F5F7" />
+                                    <stop offset="0%" stop-color="#F4F5F7" stop-opacity="0" />
+                                    <stop offset="100%" stop-color="#F4F5F7" />
                                 </linearGradient>
                             </defs>
                         </svg>
@@ -2354,5 +2354,6 @@
     <script src="./JS/swiper-bundle.js"></script>
     <script src="./JS/main.js"></script>
 </body>
+
 
 </html>
